# allapotgep.cpp

./: CMakeLists.txt  README.md  allapotgep.hpp  allapotgep2.cbp  komment.cpp  komment.hpp  lyszamlalo.cpp  lyszamlalo.hpp  main.cpp  split.cpp  split.hpp
